--- a/Portfolio.html
+++ b/Portfolio.html
@@ -175,7 +175,6 @@
             <div class="contact-details">
               <div class="contact">
                 <b class="contacts">
-                  <p class="contacts1">Contacts</p>
                   <p class="blank-line">&nbsp;</p>
                 </b>
                 <div class="contact-details-info">
@@ -186,6 +185,7 @@
                     <p class="blank-line2">
                       <b>&nbsp;</b>
                     </p>
+
                     <p class="email-semjafetcabarles3gmail1">
                       <span class="email">Email</span>
                       <span class="semjafetcabarles3gmailcom"
@@ -226,12 +226,12 @@
             class="project-image-icon"
             loading="lazy"
             alt=""
-            src="./public/rectangle-7@2x.png"
+            src="./image/inv.png"
           />
 
           <div class="project-nfo">
             <div class="project-details">
-              <h1 class="project-title">Project Name</h1>
+              <h1 class="project-title">Inventory UI</h1>
               <div class="project-description">
                 What was your role, your deliverables, if the project was
                 personal, freelancing.
@@ -250,12 +250,12 @@
               class="project-image-list"
               loading="lazy"
               alt=""
-              src="./public/rectangle-7-1@2x.png"
+              src="./image/R.png"
             />
 
             <div class="project-nfo1">
               <div class="project-item-details">
-                <h1 class="project-titles">Project Name</h1>
+                <h1 class="project-titles">Restaurant UI</h1>
                 <div class="project-descriptions">
                   What was your role, your deliverables, if the project was
                   personal, freelancing.
@@ -271,12 +271,12 @@
               class="project3-child"
               loading="lazy"
               alt=""
-              src="./public/rectangle-7-2@2x.png"
+              src="./image/video.jpg"
             />
 
             <div class="project-nfo2">
               <div class="text-parent">
-                <h1 class="text">Project Name</h1>
+                <h1 class="text">Video Edit</h1>
                 <div class="text1">
                   What was your role, your deliverables, if the project was
                   personal, freelancing.
